--- a/views/internaciones/nueva.pug
+++ b/views/internaciones/nueva.pug
@@ -153,8 +153,8 @@ block content
                   label.form-label Diagnóstico médico:
                   select.form-select(name="diagnostico_medico")
                     option(value="") --
-                    option(value="Colecistitis aguda") Colecistitis aguda
-                    option(value="Hernia inguinal") Hernia inguinal
+                    option(value="Colecistitis aguda") Lesiones de ligamentos y tendones
+                    option(value="Hernia inguinal") Hernia de disco
                     option(value="Apendicitis aguda") Apendicitis aguda
                     option(value="Cáncer de colon") Cáncer de colon
                     option(value="Obstrucción intestinal") Obstrucción intestinal
